# zechub-wiki

./: .env  .env-sample  .env.example  .env.local.example  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  generateChangeLog.ts  jest.config.js  needed.md  next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  robots.txt  tailwind.config.ts  tsconfig.json  vercel.json  zec_dex_platforms.md
.github/: dependabot.yml
.github/workflows/: egress-check.yml  menu-labels.yml  playwright.yml  revalidate.yml
changes/: Row.tsx
dictionaries/: ak.json  ar.json  de.json  ee.json  en.json  es.json  fr.json  hi.json  ig.json  it.json  ja.json  ko.json  pt.json  ru.json  sw.json  tr.json  uk.json  yo.json  zh.json
docs/: i18n.md  translation-guide.md  translation-protected-terms.md
e2e/: egress.spec.ts  export-dashboard.spec.ts
public/: ambassadors.geojson  sw.js  wallet-likes.json  wiki-banner.avif  zcash-payment-request-widget.embed.v2.js
public/content-banners/: ZFAVbanner.avif
public/data/: Shielded Supply.csv  Shielded_Supply.csv  csvjson.json  difficulty.json  hashrate.json  issuance.json  lockbox.json  netinflowoutflow.json  networksolps.json  nodecount.json  orchard_supply.json  sapling_supply.json  shielded_supply.json  shielded_supply_test.json  shielded_supply_test1.json  shielded_supply_test2.json  shieldedtxcount.json  sprout_supply.json  transaction_summary.json
public/data/zcash/zcashShieldedMetrics/ShieldedCurrents/zcash-block-fees/: Cargo.toml
public/data/zcash/zcashShieldedMetrics/ShieldedCurrents/zcash-block-fees/src/: main.rs
public/data/zcash/zcashShieldedMetrics/ShieldedCurrents/zcash-mempool-visualizer/: Cargo.toml
public/data/zcash/zcashShieldedMetrics/ShieldedCurrents/zcash-mempool-visualizer/src/: main.rs
public/data/zcash/zcashShieldedMetrics/ShieldedCurrents/zcash-shielded-currents/: Cargo.toml  benchmark.sh
public/data/zcash/zcashShieldedMetrics/ShieldedCurrents/zcash-shielded-currents/src/: main.rs
public/data/zcash/zcashShieldedMetrics/ShieldedCurrents/zcash-supply-history/: Cargo.toml
public/data/zcash/zcashShieldedMetrics/ShieldedCurrents/zcash-supply-history/src/: main.rs
public/data/zcash/zcashShieldedMetrics/ShieldedCurrents/zcash-tx-fee/: Cargo.toml
public/data/zcash/zcashShieldedMetrics/ShieldedCurrents/zcash-tx-fee/src/: main.rs
public/js/: zechub-widget.js
scripts/: check-menu-labels.mjs  copy-pdf-worker.mjs
src/: App.css  App.js  auth.config.ts  config.ts  global.d.ts  helpers.ts  mdx-components.tsx  middleware.ts  proxy.ts  types.d.ts
(+1003 files in other folders)
