[package]
name = "zcash-block-fees"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
dashmap = "6.1"
rayon = "1.10"
indicatif = "0.17"
csv = "1.3"
plotters = { version = "0.3", features = ["svg_backend"] }
serde = { version = "1.0", features = ["derive"] }
lru = "0.12"