[package]
name = "zcash-supply-history"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
base64 = "0.22"
futures = "0.3"
indicatif = "0.17"